--- a/personal/personal.css
+++ b/personal/personal.css
@@ -6,6 +6,12 @@
     width: 70%;
 }
 
+.container__family {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
 .family__img img {
     width: 30%;
 }
