--- a/career/career.css
+++ b/career/career.css
@@ -18,7 +18,7 @@
 }
 
 .info__section {
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 .list {
@@ -32,7 +32,6 @@ figcaption {
 .title {
     text-align: center;
 }
-
 
 .title__section {
     text-align: center;
