--- a/personal/personal.css
+++ b/personal/personal.css
@@ -1,17 +1,46 @@
-/* .container__bio {
-    display: flex;
-} */
+.photo--main {
+    align-self: left;
+    width: 50%;
+}
+
+.bio__details {
+    display: inline-block;
+    justify-content: center;
+    flex-direction: column;
+    width: 46%;
+}
 
 .image--left {
     width: 70%;
 }
 
+.section__heading {
+text-align: center;    
+}
+
+
+
 .container__family {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    align-content: stretch;
+}
+
+figcaption {
+    text-align: start;
+    padding: 0 0 0 5px;
 }
 
 .family__img img {
-    width: 30%;
+    height: 30%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
 }
+
+.image__section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
