--- a/career/career.css
+++ b/career/career.css
@@ -13,12 +13,12 @@
 }
 
 .info {
-    display: inline-flex;
+    display: flex;
     justify-content: center;
 }
 
 .info__section {
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 .list {
@@ -27,12 +27,32 @@
 
 figcaption {
     text-align: center;
+    font-size: 20px;
 }
 
 .title {
     text-align: center;
+    font-size: 35px;
 }
 
 .title__section {
-    text-align: center;
+    text-align: left;
+}
+
+.title__paragraph {
+    font-size: 25px;
+    text-align: justify;
+    margin: 30px 60px 0 60px;
+}
+
+.section__citation {
+    font-size: 18px;
+    margin: 0 60px 20px 60px;
+    text-align: right;
+}
+
+.list__title {
+    justify-content: space-between;
+    padding: 15px 35px 15px 35px;
+  
 }
