add styling to main.css and career.css, add links to index.html and career.html

--- a/career/career.css
+++ b/career/career.css
@@ -1,8 +1,18 @@
+body {
+   background-repeat: no-repeat;
+   background-size: cover;
+   color: rgb(214, 200, 200);
+   background-image: linear-gradient(rgba(3, 3, 3, 0.774), transparent 80%), linear-gradient(0deg, grey, transparent), url("https://data.whicdn.com/images/232687068/large.jpg");;
+}
+
+
 .image {
     display: flex;
     padding: 20px;
     justify-content: space-evenly;
     flex-direction: column;
+    opacity: 50%;
+    border-radius: 30px;
 }
 
 .image__section {
