--- a/executive-summary/executive-summary.css
+++ b/executive-summary/executive-summary.css
@@ -1,11 +1,20 @@
+h1 {
+  text-align: center;
+      
+}
+
+figure, h2 {
+  margin: 50px;
+}
+
 .image--size {
     width: 300px;
     height: 500px;
 }
 
 .image--left {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-self: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+ 
 }
