--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ header {
 }
 
 main {
-    width: 80%;
+    /* width: 80%; */
     font-family: 'Questrial', sans-serif;
 }
 
@@ -27,7 +27,12 @@ main {
      border: 5px solid rgb(214, 200, 200)
  }
 
- 
+ .social-media__list {
+    display: flex;
+    list-style: none;
+    justify-content: space-evenly;
+    font-family: 'Questrial', sans-serif;
+ }
 
  /* unvisited link */
 a:link {
