--- a/news-feed/news-feed.css
+++ b/news-feed/news-feed.css
@@ -4,7 +4,8 @@ h1 {
 
 h2 {
     text-align: center;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
+    padding-top: 20px;
 }
 
 .image--Rihanna {
@@ -15,14 +16,24 @@ h2 {
     width: 80%;
     padding-left: 50px;
     padding-right: 50px;
-    }
+  }
 
+  .row{
+      display: flex;
+  }
+  .column {
+    flex: 50%;
+    padding: 10px;
+    justify-content: space-between;
+  }
     /* dd {
         margin: 0;
         display: inline;
+        font-weight: 200;
       }
       
       dt {
          display: inline-block;
         margin: 0 5px 5px 0;
+        padding-left: 10px;
       } */
