--- a/news-feed/news-feed.css
+++ b/news-feed/news-feed.css
@@ -3,6 +3,7 @@ body {
 }
 h1 {
     padding-bottom: 25px;
+    text-align: center;
 }
 
 h2 {
@@ -16,7 +17,7 @@ h2 {
     height: 360px;
 }
 .wrapper {
-    width: 80%;
+    width: 90%;
     padding-left: 50px;
     padding-right: 50px;
   }
